--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <ul>
             <li><span>Fecha de nacimiento: </span>15/03/1990</li>
             <li><span>Lugar de Residencia: </span>Buenos Aires, Argentina</li>
-            <li><span>Contacto: </span>elineth.malave@gmail.com</li>
+            <li><span>E-mail: </span>elineth.malave@gmail.com</li>
+            <li><span>Teléfono: </span>1122520687</li>
         </ul>
         </nav>
     </section>
@@ -34,9 +35,9 @@
     <hr>
 
     <section class="sobremi">
-        <h2>Sobre Mi</h2>
-        <p>Consultora de marketing digital, con de 5 años de experiencia en desarrollo de e-commerce y manejo de redes sociales.
-            Me gusta estar actualizada en lo referente a nuevas tecnologías e innovaciones del mercado, soy una persona autodidacta en constante aprendizaje.</p>
+        <h2>Sobre Mí</h2>
+        <p>Persona responsable, dinámica y creativa.
+            Con capacidad de planificación, organización y trabajo en equipo, me encuentro en la búsqueda nuevos desafíos en una empresa que me permita desarrollarme profesionalmente.</p>
     </section>
 
     <hr>
@@ -45,18 +46,18 @@
         <h2>Educación</h2>
         <table>
             <tr>
-                <td class="date">10/2021 - 12/2023:</td>
-                <td>Digital House <br>Certified Tech Developer <br>Online</td>
+                <td class="date">10/2020 - 12/2021:</td>
+                <td>Digital House <br>Certified Tech Developer</td>
             </tr>
 
             <tr>
-                <td class="date">09/2019 - 12/2019:</td>
-                <td>Digital House<br> Marketing Digital</td>
+                <td class="date">03/2021 - 05/2021:</td>
+                <td>Ministerio de Desarrollo Productivo de la Nación y la Cámara Empresarial de Software y Servicios Informáticos (CESSI)<br> Introducción a la Programación</td>
             </tr>
 
             <tr>
                 <td class="date">09/2012 - 12/2015:</td>
-                <td>Instituto Universitario de Técnologia <br>Tecnico Superior en Marketing Digital</td>
+                <td>Instituto Universitario de Técnologia de Cabimas <br>Técnico Superior en Higiene y Seguridad Laboral</td>
             </tr>
         </table>
     </section>
@@ -68,17 +69,12 @@
         <table>
         <tr>
             <td class="date"> 08/2021 - 11/2021:</td>
-            <td>Community Manager<br> Freelance</td>
-        </tr>
-
-        <tr>
-            <td class="date"> 09/2021 - 11/2021:</td>
-            <td>Desarrollador E-commerce<br> BA Joven </td>
+            <td>Community Manager<br> ID Ride Daily</td>
         </tr>
 
         <tr>
             <td class="date"> 12/2016 - 09/2021:</td>
-            <td>E-commerce Manager <br>Tokio Store</td>
+            <td>Gestión de E-commerce <br>Tokio Store</td>
         </tr>
     </table>
     </section>
@@ -88,17 +84,28 @@
     <section>
         <h2>Hábilidades Técnicas</h2>
         <ul>
-            <li>Gestión de redes sociales (Instagram, Facebook, Tiktok, Linkedin) Creación de Landing pages</li>
-            <li>Branding y perfomance</li>
-            <li>Creación de contenido Digital</li>
-            <li>SEO-SEM</li>
-            <li>Google Analytics, Google Ads, Facebook Ads & Instagram Ads</li>
-            <li>E-mail marketing</li>
-                Gestión de campañas.
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>Git</li>
+            <li>MySQL</li>
+            <li>Javascript</li>
+            <li>Node.js</li>
             <li>Programas de diseño (Illustrator, After Effects, In Design y Photoshop)</li>
-            <li>Programación Web (HTML5, CSS3 y JAVA)</li>
             <li>Marketplace (Mercadolibre, Amazon, Ebay, Alibaba, Aliexpress, Google Shopping)</li>
             <li>Plataformas e-commerce (Wordpress, Woocommerce, Magento, Shopify)</li>
+        </ul>
+    </section>
+
+    <hr>
+
+    <section>
+        <h2>Hábilidades Blandas</h2>
+        <ul>
+            <li>Colaborativa</li>
+            <li>Resolutiva</li>
+            <li>Curiosa</li>
+            <li>Aprendizaje continuo</li>
+            <li>Compromiso y dedicación</li>
         </ul>
     </section>
 
